@@ -171,7 +171,6 @@ void CSharedFilesCtrl::OnRightClick(wxListEvent& event)
 		m_menu->Enable(MP_GETHOSTNAMESOURCEED2KLINK, !thePrefs::GetYourHostname().IsEmpty());
 		m_menu->Enable(MP_GETHOSTNAMECRYPTSOURCEED2KLINK, !thePrefs::GetYourHostname().IsEmpty());
 		m_menu->Enable(MP_RENAME, file->IsPartFile());
-		m_menu->Enable(MP_WS, file->IsPartFile());
 		
 		PopupMenu( m_menu, event.GetPoint() );
 
@@ -187,14 +186,15 @@ void CSharedFilesCtrl::OnGetFeedback(wxCommandEvent& WXUNUSED(event))
 	wxString feed;
 	long index = GetNextItem(-1, wxLIST_NEXT_ALL, wxLIST_STATE_SELECTED);
 	while (index != -1) {
-		CKnownFile* file = (CKnownFile*)GetItemData(index);
-		
-		if (file->IsPartFile()) {
-			feed += dynamic_cast<CPartFile*>(file)->GetFeedback();
+		if (feed.IsEmpty()) {
+			feed = CFormat(wxT("Feedback from: %s (%s)\n\n")) % thePrefs::GetUserNick() % GetFullMuleVersion();
+		} else {
+			feed += wxT("\n");
 		}
-		
+		feed += ((CKnownFile*)GetItemData(index))->GetFeedback();
 		index = GetNextItem(index, wxLIST_NEXT_ALL, wxLIST_STATE_SELECTED);
 	}
+
 	if (!feed.IsEmpty()) {
 		theApp->CopyTextToClipboard(feed);
 	}
